--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,12 @@
   <script type="text/javascript"
     src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
-  <title>Credenthealth</title>
+    <head>
+  <!-- Other head elements -->
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+</head>
+
+  <title>EDITEZY</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
