--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <meta name="theme-color" content="#4f46e5" />
+
+
   <!-- Google Translate Integration -->
   <script type="text/javascript">
     function googleTranslateElementInit() {
@@ -22,10 +26,10 @@
   <script type="text/javascript"
     src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
-    <head>
-  <!-- Other head elements -->
-<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-</head>
+  <head>
+    <!-- Other head elements -->
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+  </head>
 
   <title>EDITEZY</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
