--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,11 @@
   <link rel="icon" href="/logo.png" />
   <link rel="apple-touch-icon" href="/logo.png" />
 
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="apple-mobile-web-app-title" content="EZY Studio">
+  <link rel="apple-touch-icon" href="/logo.png">
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
